Fix wrong font being used

--- a/resources/assets/scss/abstracts/_variables.scss
+++ b/resources/assets/scss/abstracts/_variables.scss
@@ -36,7 +36,7 @@ $sans-serif: (
   sans-serif
 );
 
-$font-text: (
+$favon-font-text: (
   -apple-system,
   system-ui,
   BlinkMacSystemFont,
