--- a/resources/assets/scss/components/_card.scss
+++ b/resources/assets/scss/components/_card.scss
@@ -92,7 +92,7 @@
 
     .description__plot {
       color: $card-color-accent;
-      font-family: $font-text;
+      font-family: $favon-font-text;
       font-size: 1.3rem;
       font-weight: 300;
       letter-spacing: normal;
